Fix zapping of UA-specific builds
git-svn-id: https://alcina.googlecode.com/svn/trunk@10 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/build.properties
+++ b/build.properties
@@ -29,3 +29,9 @@ framework.gwt.classpath.src=${framework.dir}/common/src:${framework.dir}/gwt/src
 framework.gwt.classpath.bin=${framework.entity.build.dir}
 framework.gwt.classpath.lib=${framework.lib.dir}/common/ejb3-persistence.jar:${framework.lib.dir}/common/jaxb-api.jar:${framework.lib.dir}/gwt/commongwtx-1.5-20081002.jar:${framework.lib.dir}/gwt/gwittir-core-0.4.4.jar:${framework.lib.dir}/gwt/gwt-gears-noredist.jar:${framework.lib.dir}/gwt/gwt-user.jar
 ant.build.javac.target=1.5
+
+#zap UA-specific compilation for non-dev builds
+gwt.replace.1=<set-property name="user.agent" value="safari" />
+gwt.replace.2=<set-property name="user.agent" value="gecko1_8" />
+gwt.replace.3=<set-property name\="user.agent" value\="ie_6" />
+gwt.replace.4=<set-property name\="user.agent" value\="ie_8" />
