Change client exception logging, override GWT emulation of java.sql.Timestamp
git-svn-id: https://alcina.googlecode.com/svn/trunk@13 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/build.properties
+++ b/build.properties
@@ -25,7 +25,7 @@ framework.gwt.client.public=${framework.dir}/gwt/src/cc/alcina/framework/gwt/pub
 framework.gwt.client.css.1=${framework.gwt.client.public}/Alcina.css
 
 #GWT compilation
-framework.gwt.classpath.src=${framework.dir}/common/src:${framework.dir}/gwt/src
+framework.gwt.classpath.src=${framework.dir}/common/src:${framework.dir}/gwt/src:${framework.dir}/emul/src
 framework.gwt.classpath.bin=${framework.entity.build.dir}
 framework.gwt.classpath.lib=${framework.lib.dir}/common/ejb3-persistence.jar:${framework.lib.dir}/common/jaxb-api.jar:${framework.lib.dir}/gwt/commongwtx-1.5-20081002.jar:${framework.lib.dir}/gwt/gwittir-core-0.4.4.jar:${framework.lib.dir}/gwt/gwt-gears-noredist.jar:${framework.lib.dir}/gwt/gwt-user.jar
 ant.build.javac.target=1.5
