Documentation, registry cleanup
git-svn-id: https://alcina.googlecode.com/svn/trunk@56 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,8 @@
-#Sat Apr 03 15:56:15 PDT 2010
+#Tue Apr 06 05:51:06 PDT 2010
 eclipse.preferences.version=1
 encoding//doc/src/client-handshake.uml=UTF-8
 encoding//doc/src/client-handshake.umlseq=UTF-8
+encoding//doc/src/codomains.uml=UTF-8
+encoding//doc/src/codomains.umlcomp=UTF-8
+encoding//doc/src/test.uml=UTF-8
+encoding//doc/src/test.umlseq=UTF-8
