--- a/build.properties
+++ b/build.properties
@@ -38,5 +38,5 @@ ant.build.javac.target=1.5
 #zap UA-specific compilation for non-dev builds
 gwt.replace.1=<set-property name="user.agent" value="safari" />
 gwt.replace.2=<set-property name="user.agent" value="gecko1_8" />
-gwt.replace.3=<set-property name="user.agent" value="ie_6" />
-gwt.replace.4=<set-property name="user.agent" value="ie_8" />
+gwt.replace.3=<set-property name="user.agent" value="ie6" />
+gwt.replace.4=<set-property name="user.agent" value="ie8" />
