--- a/template/server/.classpath
+++ b/template/server/.classpath
@@ -3,15 +3,14 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/alcina/lib/framework/entity/log4j-1.2.6.jar"/>
-	<classpathentry kind="lib" path="/alcina/lib/framework/common/ejb3-persistence.jar"/>
 	<classpathentry kind="lib" path="/alcina/lib/framework/gwt/gwt-servlet.jar" sourcepath="/alcina/lib/framework/gwt/gwt-user.jar"/>
 	<classpathentry kind="lib" path="/alcina/lib/framework/gwt/gwittir-trunk.jar"/>
 	<classpathentry kind="lib" path="/alcina/lib/framework/entity/jsr173_api.jar"/>
 	<classpathentry kind="lib" path="/alcina/lib/framework/common/jaxb-api.jar"/>
-	<classpathentry kind="lib" path="/alcina/lib/framework/impl/jboss-hibernate/hibernate-all.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/alcinaTemplate_entities"/>
 	<classpathentry kind="src" path="mover-tool"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/alcina"/>
 	<classpathentry kind="lib" path="/alcina/lib/framework/servlet/javax.servlet.jar"/>
+	<classpathentry kind="lib" path="/alcina/lib/framework/common/persistence-api-1.0.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
