update paths, fix init sequence
git-svn-id: https://alcina.googlecode.com/svn/trunk@117 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/build.xml
+++ b/build.xml
@@ -101,7 +101,7 @@
 				<exclude name="**/*.class" />
 			</fileset>
 		</copy>
-		<jar destfile="${framework.dist.dir}/${ant.project.name}-server.jar">
+		<jar destfile="${framework.dist.dir}/${ant.project.name}-servlet.jar">
 			<metainf dir="${framework.servlet.base.dir}/META-INF" />
 			<fileset dir="${framework.servlet.build.dir}">
 				<include name="**/*.*" />
