update paths, fix init sequence
git-svn-id: https://alcina.googlecode.com/svn/trunk@120 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/template/client/.classpath
+++ b/template/client/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/alcinaTemplate_entities"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/alcinaTemplate_entity"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/alcina"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="lib" path="/alcina/lib/framework/gwt/gwittir-trunk.jar"/>
