--- a/template/servlet/build.properties
+++ b/template/servlet/build.properties
@@ -3,7 +3,6 @@ project.entity.home=../entity
 project.client.home=../client
 project.entity.dist.dir=${project.entity.home}/dist
 project.entity.src.dir=${project.entity.home}/src
-project.barnet-common.dist.dir=${barnet-common.home}/dist
 project.dir=.
 project.base.dir=.
 project.src.dirs=${project.base.dir}/src:${project.entity.src.dir}
@@ -13,6 +12,7 @@ project.src.dir=${project.base.dir}/src
 project.war.dir=${project.base.dir}/WebRoot
 project.war.lib.dir=${project.base.dir}/lib/war
 project.web-inf.dir=${project.war.dir}/WEB-INF
+project.web-inf.classes.dir=${project.web-inf.dir}/classes
 project.ear.lib.dir=${project.base.dir}/lib/ear
 project.ear-inf.dir=${project.base.dir}/meta-inf/EAR
 
