--- a/tools/appcreator/build.properties
+++ b/tools/appcreator/build.properties
@@ -1,6 +1,7 @@
 project.dir=.
 alcina.home.dir=../../
-alcina.template.home.dir=../template
+alcina.template.home.dir=../../template
+alcina.lib.framework.dir=${alcina.home.dir}/lib/framework
 
 project.lib.dir=lib
 project.dist-lib.dir=dist
@@ -11,6 +12,8 @@ tmp.dir=${project.work.dir}/tmp
 
 template.package=cc.alcina.template
 template.name=AlcinaTemplate
+template.name.cc=alcinaTemplate
 template.human.name=Alcina Template
+
 template.root.package.dir=cc/alcina/template
 
