--- a/tools/appcreator/taskdefs.properties
+++ b/tools/appcreator/taskdefs.properties
@@ -1,2 +1,4 @@
 download-libs=cc.alcina.appcreator.DownloadLibs
 check-config=cc.alcina.appcreator.CheckConfig
+prune-empty=cc.alcina.appcreator.PruneEmpty
+rename-starts-with=cc.alcina.appcreator.RenameStartsWith
