app creator working...
git-svn-id: https://alcina.googlecode.com/svn/trunk@126 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/template/entity/local.ant.properties.template
+++ b/template/entity/local.ant.properties.template
@@ -1,13 +1,14 @@
-alcina.home=/Users/ouiji/Documents/current/alcina/projects/alcina
-gwt.sdk.dir=/Users/ouiji/Documents/programmin/gwt/gwt-2.0.3/
-deploy.j2ee-server.server=/Users/ouiji/Documents/lib/java/jboss-5.1.0.GA/server/all
-deployment.file.name=alcinaTemplate_server
+alcina.home=ALCINA_HOME
+gwt.sdk.dir=GWT_SDK_DIR
+deploy.j2ee-server.server=DEPLOY_JBOSS_DIR_ABS/server/all
+deployment.ear.name=alcinaTemplate
+deployment.war.name=alcinaTemplate_servlet
 
 alcina.compiler.args=-Xlint:unchecked
 #-nowarn
 project.gwt.compile.flags=
 #-draftCompile
 deploy.j2ee-server.deploy.dir=${deploy.j2ee-server.server}/deploy
-j2ee-server.unear.target=${deploy.j2ee-server.deploy.dir}/${deployment.file.name}.ear
-j2ee-server.unwar.target=${deploy.j2ee-server.deploy.dir}/${deployment.file.name}.ear/${deployment.file.name}.war
+j2ee-server.unear.target=${deploy.j2ee-server.deploy.dir}/${deployment.ear.name}.ear
+j2ee-server.unwar.target=${deploy.j2ee-server.deploy.dir}/${deployment.ear.name}.ear/${deployment.war.name}.war
 developer=true
