--- a/tools/appcreator/build.properties
+++ b/tools/appcreator/build.properties
@@ -1,13 +1,17 @@
 project.dir=.
-alcina.home.dir=../../
+alcina.home.dir=../..
 alcina.template.home.dir=../../template
 alcina.lib.framework.dir=${alcina.home.dir}/lib/framework
+alcina.lib.framework.gwt.dir=${alcina.lib.framework.dir}/gwt
 
 project.lib.dir=lib
 project.dist-lib.dir=dist
 project.src.dir=src
 framework.download.dir=${project.work.dir}/download/framework
 container.download.dir=${project.work.dir}/download/container
+
+deploy.jboss.dir=${project.work.dir}/deploy/jboss/jboss-5.1.0.GA
+deploy.jboss.dir.server=${deploy.jboss.dir}/server/all
 tmp.dir=${project.work.dir}/tmp
 
 template.package=cc.alcina.template
