--- a/tools/appcreator/local.ant.properties
+++ b/tools/appcreator/local.ant.properties
@@ -1,4 +1,5 @@
 project.work.dir=${user.home}/.alcina/appcreator
+ant.build.javac.target=1.5
 
 app.name=MyApp
 app.package=com.moi.myapp
@@ -9,4 +10,8 @@ db.name=myapp
 db.username=myappuser
 db.password=myapppassword
 db.connection.url=jdbc:postgresql://localhost:5432
+
+
+# emtpy string = all clients
+build.gwt.client=safari
 
