get rid of crud
git-svn-id: https://alcina.googlecode.com/svn/trunk@133 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/template/servlet/build.xml
+++ b/template/servlet/build.xml
@@ -35,6 +35,8 @@
 	</fileset>
 	<patternset id="project.jar.filter.exclude">
 	</patternset>
+	<patternset id="project.compile.client.filter.exclude">
+	</patternset>
 	<import file="${alcina.home}/framework-paths.xml" />
 	<path id="project.classpath">
 		<fileset dir="${project.lib.dir}">
