clean-all should not clean gwt code
git-svn-id: https://alcina.googlecode.com/svn/trunk@134 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/tools/appcreator/build.xml
+++ b/tools/appcreator/build.xml
@@ -48,6 +48,8 @@
 	<target name="build-app" depends="prepare">
 		<ant dir="${project.work.dir}/${app.name.lc}/servlet" target="clean-all">
 		</ant>
+		<ant dir="${project.work.dir}/${app.name.lc}/servlet" target="clean-gwt">
+		</ant>
 		<ant dir="${project.work.dir}/${app.name.lc}/servlet" target="compile-gwt">
 		</ant>
 	</target>
