compile gwt for all clients
git-svn-id: https://alcina.googlecode.com/svn/trunk@138 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/template/entity/local.ant.properties.template
+++ b/template/entity/local.ant.properties.template
@@ -11,4 +11,4 @@ project.gwt.compile.flags=
 deploy.j2ee-server.deploy.dir=${deploy.j2ee-server.server}/deploy
 j2ee-server.unear.target=${deploy.j2ee-server.deploy.dir}/${deployment.ear.name}.ear
 j2ee-server.unwar.target=${deploy.j2ee-server.deploy.dir}/${deployment.ear.name}.ear/${deployment.war.name}.war
-developer=true
+#developer=true
