IE offline statuscode bug (sc=12676 for no connection ... interesting)
git-svn-id: https://alcina.googlecode.com/svn/trunk@152 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/tools/appcreator/local.ant.properties
+++ b/tools/appcreator/local.ant.properties
@@ -5,13 +5,15 @@ app.name=MyApp
 app.package=com.moi.myapp
 app.human.name=My App
 
-db.jdbc.driver.className=org.postgresql.Driver
-db.name=myapp
-db.username=myappuser
-db.password=myapppassword
-db.connection.url=jdbc:postgresql://localhost:5432
+# unused - for the moment
+#db.jdbc.driver.className=org.postgresql.Driver
+#db.name=myapp
+#db.username=myappuser
+#db.password=myapppassword
+#db.connection.url=jdbc:postgresql://localhost:5432
 
+jboss.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
-# emtpy string = all clients
-build.gwt.client=safari
+# emtpy string = all clients - otherwise sets the UA for the main gwt.xml module
+build.gwt.client=
 
