fixes to app creator
git-svn-id: https://alcina.googlecode.com/svn/trunk@154 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/tools/appcreator/build.xml
+++ b/tools/appcreator/build.xml
@@ -3,6 +3,8 @@
 	<copy overwrite="false" file="local.ant.properties.template" tofile="local.ant.properties" />
 	<property file="local.ant.properties" />
 	<property file="build.properties" />
+	<copy overwrite="false" file="${alcina.home.dir}/local.ant.properties.template" tofile="${alcina.home.dir}}/local.ant.properties" />
+		
 	<path id="project.classpath">
 		<fileset dir="${project.lib.dir}">
 			<include name="**/*.jar" />
