Allow yet another custom stylesheet
git-svn-id: https://alcina.googlecode.com/svn/trunk@190 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/template/servlet/build.properties
+++ b/template/servlet/build.properties
@@ -25,6 +25,7 @@ project.gwt.client.public=${project.gwt.client.root}/public
 project.gwt.client.html=${project.gwt.client.public}/AlcinaTemplateClient.html
 project.gwt.client.css.1=${project.gwt.client.public}/AlcinaTemplateClient.css
 project.gwt.client.css.2=${project.gwt.client.public}/AlcinaTemplateClient.css
+project.gwt.client.css.3=${project.gwt.client.public}/AlcinaTemplateClient.css
 #the same as .1
 project.gwt.client.imgs.1=${project.gwt.client.root}/client/widgets/res/_pix
 project.gwt.client.imgs.2=${project.gwt.client.public}/img
