- Adjust build to allow for extras - Change default publication params
git-svn-id: https://alcina.googlecode.com/svn/trunk@308 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/build.properties
+++ b/build.properties
@@ -20,6 +20,11 @@ framework.servlet.lib.dir=${framework.lib.dir}/servlet
 framework.impl.jboss-hibernate.lib.dir=${framework.lib.dir}/impl/jboss-hibernate
 framework.dist.dir=${alcina.home}/dist
 
+extras.collections.dir=${alcina.home}/extras/collections
+extras.collections.src.dir=${extras.collections.dir}/src
+extras.collections.build.dir=${extras.collections.dir}/build
+
+
 framework.javadoc.outputpath=${alcina.home}/javadoc/trunk
 
 #for hot-deploy
