--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="framework/common/src"/>
+	<classpathentry kind="src" path="extras/collections/src"/>
 	<classpathentry kind="src" path="framework/javaclient/src"/>
 	<classpathentry kind="src" path="framework/entity/src"/>
 	<classpathentry kind="src" path="framework/impl/jboss-hibernate/src"/>
