--- a/tools/appcreator/local.ant.properties
+++ b/tools/appcreator/local.ant.properties
@@ -1,9 +1,9 @@
 project.work.dir=${user.home}/.alcina/appcreator
 ant.build.javac.target=1.5
 
-app.name=MobilityLab
-app.package=com.apdm.mobilitylab
-app.human.name=Mobility Lab
+app.name=MyApp
+app.package=com.moi.myapp
+app.human.name=My App
 
 # unused - for the moment
 #db.jdbc.driver.className=org.postgresql.Driver
