HTML5 appcache, webdb (no indexddb yet)
git-svn-id: https://alcina.googlecode.com/svn/trunk@372 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/.classpath
+++ b/.classpath
@@ -22,5 +22,6 @@
 	<classpathentry kind="lib" path="lib/framework/impl/jboss-hibernate/hibernate-annotations.jar"/>
 	<classpathentry kind="lib" path="lib/framework/impl/jboss-hibernate/jboss-javaee.jar"/>
 	<classpathentry kind="lib" path="lib/framework/impl/jboss-hibernate/hibernate-core.jar" sourcepath="/jboss-hibernate-core/src/main/java"/>
+	<classpathentry kind="lib" path="lib/framework/gwt/gwt-html5-database.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
