--- a/build.properties
+++ b/build.properties
@@ -37,7 +37,7 @@ framework.remote.asyncinterface.class=cc/alcina/framework/common/client/remote/C
 #GWT compilation
 framework.gwt.classpath.src=${framework.dir}/common/src:${framework.dir}/gwt/src:${framework.dir}/emul/src
 framework.gwt.classpath.bin=${framework.entity.build.dir}
-framework.gwt.classpath.lib=${framework.lib.dir}/common/persistence-api-1.0.jar:${framework.lib.dir}/common/jaxb-api.jar:${framework.lib.dir}/gwt/gwtx-1.5.2.jar:${framework.lib.dir}/gwt/gwittir-trunk.jar:${framework.lib.dir}/gwt/gwt-gears-noredist.jar:${framework.lib.dir}/gwt/gwt-user.jar
+framework.gwt.classpath.lib=${framework.lib.dir}/common/persistence-api-1.0.jar:${framework.lib.dir}/common/jaxb-api.jar:${framework.lib.dir}/gwt/gwtx-1.5.2.jar:${framework.lib.dir}/gwt/gwittir-trunk.jar:${framework.lib.dir}/gwt/gwt-gears-noredist.jar:${framework.lib.dir}/gwt/gwt-html5-database.jar:${framework.lib.dir}/gwt/gwt-user.jar
 ant.build.javac.target=1.5
 
 #zap UA-specific compilation for non-dev builds
