Support for jvm (as opposed to gwt) clients
git-svn-id: https://alcina.googlecode.com/svn/trunk@381 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/build.properties
+++ b/build.properties
@@ -13,6 +13,11 @@ framework.entity.build.dir=${framework.entity.base.dir}/build
 framework.servlet.build.dir=${framework.servlet.base.dir}/build
 framework.impl.jboss-hibernate.build.dir=${framework.impl.jboss-hibernate.base.dir}/build
 
+framework.jvmclient.dir=${alcina.home}/framework/jvmclient
+framework.jvmclient.src.dir=${framework.jvmclient.dir}/src
+framework.jvmclient.build.dir=${framework.jvmclient.dir}/build
+
+
 framework.gwt.lib.dir=${framework.lib.dir}/gwt
 framework.common.lib.dir=${framework.lib.dir}/common
 framework.entity.lib.dir=${framework.lib.dir}/entity
