Support for jvm (as opposed to gwt) clients
git-svn-id: https://alcina.googlecode.com/svn/trunk@383 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/build.xml
+++ b/build.xml
@@ -50,6 +50,14 @@
 			</classpath>
 			<compilerarg value="${alcina.compiler.args}" />
 		</javac>
+		<mkdir dir="${framework.jvmclient.build.dir}" />
+		<javac debug="on" srcdir="${framework.jvmclient.src.dir}" destdir="${framework.jvmclient.build.dir}">
+			<classpath>
+				<path refid="framework.common.lib.path" />
+				<pathelement path="${framework.entity.build.dir}" />
+			</classpath>
+			<compilerarg value="${alcina.compiler.args}" />
+		</javac>
 	</target>
 
 	<target name="make-jars" description="Make entity, entity-impl, servlet and extras jars " depends="compile">
