- fix javadoc build - remove unused annotation method
git-svn-id: https://alcina.googlecode.com/svn/trunk@405 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/build.properties
+++ b/build.properties
@@ -43,6 +43,9 @@ framework.remote.asyncinterface.class=cc/alcina/framework/common/client/remote/C
 framework.gwt.classpath.src=${framework.dir}/common/src:${framework.dir}/gwt/src:${framework.dir}/emul/src
 framework.gwt.classpath.bin=${framework.entity.build.dir}
 framework.gwt.classpath.lib=${framework.lib.dir}/common/persistence-api-1.0.jar:${framework.lib.dir}/common/jaxb-api.jar:${framework.lib.dir}/gwt/gwtx-1.5.2.jar:${framework.lib.dir}/gwt/gwittir-trunk.jar:${framework.lib.dir}/gwt/gwt-html5-database.jar:${framework.lib.dir}/gwt/gwt-user.jar
+
+#Javadoc comp
+framework.gwt.classpath.dev.lib=${framework.lib.dir}/gwt/gwt-dev.jar
 ant.build.javac.target=1.5
 
 #zap UA-specific compilation for non-dev builds
