Collections build gwt
git-svn-id: https://alcina.googlecode.com/svn/trunk@434 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/build.xml
+++ b/build.xml
@@ -84,9 +84,13 @@
 				<include name="**/*.css" />
 			</fileset>
 		</jar>
+
 		<jar destfile="${framework.dist.dir}/${ant.project.name}-extras-collections.jar">
 			<fileset dir="${extras.collections.build.dir}">
 				<include name="**/*.*" />
+			</fileset>
+			<fileset dir="${extras.collections.src.dir}">
+				<exclude name="**/*.class" />
 			</fileset>
 		</jar>
 		<jar destfile="${framework.dist.dir}/${ant.project.name}-jvmclient.jar">
