--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,7 @@
 	<classpathentry kind="src" path="framework/impl/jboss-hibernate/src"/>
 	<classpathentry kind="src" path="framework/gwt/src"/>
 	<classpathentry kind="src" path="framework/servlet/src"/>
+	<classpathentry kind="src" path="extras/cluster/tasks-src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/framework/common/persistence-api-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/framework/common/jaxb-api.jar"/>
