Mod build for gwt2.4
git-svn-id: https://alcina.googlecode.com/svn/trunk@482 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/template/servlet/build.xml
+++ b/template/servlet/build.xml
@@ -64,6 +64,7 @@
 		<antcall target="clean">
 		</antcall>
 		<delete dir="${project.client.bin.dir}" />
+		<delete dir="${project.base.dir}/gwt-unitCache" />
 	</target>
 	<target name="clean-gwt">
 		<delete dir="${project.gwt.build.dir}" />
