AS7 support for template
git-svn-id: https://alcina.googlecode.com/svn/trunk@491 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/template/entity/build.xml
+++ b/template/entity/build.xml
@@ -23,7 +23,7 @@
 		<include name="**/*.java" />
 	</patternset> 
 		<patternset id="project.jar.filter.exclude">
-		<exclude name="org/cosa/survey/cs/remote/*.*" />
+		<exclude name="cc/alcina/template/cs/remote/**" />
 	</patternset>
 	
 	<import file="${alcina.home}/project-build.xml" />
